[gd_scene load_steps=34 format=2]

[ext_resource path="res://Texture/Sprite/Swamp Boss.png" type="Texture" id=1]
[ext_resource path="res://Script/SwampBoss.gd" type="Script" id=2]
[ext_resource path="res://SFX/pop.ogg" type="AudioStream" id=3]
[ext_resource path="res://SFX/swap_boss_cry.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/explosion.ogg" type="AudioStream" id=5]
[ext_resource path="res://SFX/gas.ogg" type="AudioStream" id=6]
[ext_resource path="res://Shader/flash_shader.gdshader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=25]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": false,
"name": "Explode",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Attack",
"speed": 4.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "Attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Explode"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Explode" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=26]
resource_name = "Flash"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Gas"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Gas/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Gas/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -80 ), Vector2( 0, -52 ), Vector2( 0, -32 ), Vector2( 0, -4 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Gas/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Gas/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -80 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:material:shader_param/flash_modifier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66, 72.875 )

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Explode"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Idle"

[sub_resource type="AnimationNodeTransition" id=16]
input_count = 2
input_0/name = "Idle"
input_0/auto_advance = false
input_1/name = "Attack"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=17]
input_count = 2
input_0/name = "Alive"
input_0/auto_advance = false
input_1/name = "Dead"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=8]
graph_offset = Vector2( 0, 87 )
nodes/Attack/node = SubResource( 13 )
nodes/Attack/position = Vector2( 0, 240 )
nodes/Explode/node = SubResource( 14 )
nodes/Explode/position = Vector2( 200, 360 )
nodes/Idle/node = SubResource( 15 )
nodes/Idle/position = Vector2( 0, 100 )
nodes/alive_transition/node = SubResource( 16 )
nodes/alive_transition/position = Vector2( 200, 200 )
nodes/output/position = Vector2( 600, 200 )
nodes/state/node = SubResource( 17 )
nodes/state/position = Vector2( 400, 200 )
node_connections = [ "state", 0, "alive_transition", "state", 1, "Explode", "output", 0, "state", "alive_transition", 0, "Idle", "alive_transition", 1, "Attack" ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 80, 100 )

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0, 0.490683, 1 )
colors = PoolColorArray( 0.305801, 0.765625, 0.0478516, 1, 0.271885, 0.601563, 0.0869446, 1, 0.0471838, 0.285156, 0.0334167, 1 )

[sub_resource type="GradientTexture" id=21]
gradient = SubResource( 20 )

[sub_resource type="Curve" id=22]
_data = [ Vector2( 0, 0.490909 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=23]
curve = SubResource( 22 )

[sub_resource type="ParticlesMaterial" id=19]
emission_shape = 2
emission_box_extents = Vector3( 70, 60, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 350.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
scale = 25.0
scale_curve = SubResource( 23 )
color_ramp = SubResource( 21 )

[node name="SwampBoss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 25 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
animation = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Attack = SubResource( 11 )
anims/Explode = SubResource( 12 )
anims/Flash = SubResource( 26 )
anims/Gas = SubResource( 24 )
anims/Idle = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 23.125 )
shape = SubResource( 1 )
disabled = true

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InvulnerableTimer" type="Timer" parent="."]
one_shot = true

[node name="Spawner" type="Position2D" parent="."]
position = Vector2( 0, -80 )

[node name="PopSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -80 )
stream = ExtResource( 3 )

[node name="Cry" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="GasSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="ExplodeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimatedSprite/AnimationPlayer")
active = true
parameters/alive_transition/current = 0
parameters/state/current = 0

[node name="Gas" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gas"]
position = Vector2( 0, -80 )
shape = SubResource( 18 )

[node name="GasParticle" type="Particles2D" parent="."]
position = Vector2( 0, -24 )
emitting = false
amount = 100
speed_scale = 0.8
process_material = SubResource( 19 )

[connection signal="timeout" from="IntroTimer" to="." method="_on_IntroTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="Gas" to="." method="_on_Gas_body_entered"]
